# linear-regression

./: README.md  pyproject.toml
linear-regression/: pyproject.toml  regression.ipynb
